Newsletter button cropping fix

--- a/frontend/scss/molecules/_m-aside-newsletter.scss
+++ b/frontend/scss/molecules/_m-aside-newsletter.scss
@@ -311,7 +311,7 @@
 }
 
 .m-aside-newsletter--wide button {
-  width: 60px;
+  width: auto;
   margin-top: 0;
   padding: 0;
   border-width: 0;
